--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,6 @@ spring.datasource.url=${DATASOURCE_URL}
 spring.datasource.driver-class-name=${DATASOURCE_CLASSNAME}
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.default_schema=public
+
+
+jwt.secret=${JWT_SECRET}
